syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service CriacaoPixService {
  rpc cadastrar (DadosCriacaoPixRequest) returns (DadosCriacaoPixResponse) {}
}

enum TipoChave{
  CPF = 0;
  CELULAR = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum TipoConta{
  CORRENTE = 0;
  POUPANCA = 1;
}

message DadosCriacaoPixRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}

message DadosCriacaoPixResponse {
  string message = 1;
}